test/tests/stages/5_local_variables/invalid_semantics/extra_credit/prefix_incr_non_lvalue.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  CPrefix: 
                  None: 
                  CBinary: 
                    CAdd: 
                    CBinary: 
                      CAdd: 
                      CVar: 
                        TIdentifier: a
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
